# be-python--fe-tanstack

./: .env.example  .gitignore  pyproject.toml
.rumsan/: dev.json
.rumsan/info/: seed-info.md
app/: auth.py  config.py  database.py  main.py
app/models/: note.py  schemas.py
app/routers/: notes.py
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: styles.css
frontend/src/components/: login.tsx
frontend/src/components/layout/: app-shell.tsx  icon-sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/routes/: __root.tsx  index.tsx
