[project]
name = "app"
version = "0.1.0"
description = "FastAPI + TanStack Router seed"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5.0",
]

[project.scripts]
dev = "app.main:start"
prod = "app.main:start_prod"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
